@@ -36,9 +36,9 @@ public class BaseEndToEndTest {
         boolean isRust = scaffolding.RustTestHelper.isRustMode();
         if (isRust) {
             return new RustCrankerRouter(
-                    null, false, false, "cranker-connector-test", java.util.Collections.emptySet(),
-                    10000, 2000, 30000, 60000, java.util.Collections.emptyList(), null,
-                    List.of("cranker_3.0", "cranker_1.0"), null, true
+                null, false, false, "cranker-connector-test", java.util.Collections.emptySet(),
+                10000, 2000, 30000, 60000, java.util.Collections.emptyList(), null,
+                List.of("cranker_3.0", "cranker_1.0"), null, true
             );
         } else {
             return CrankerRouterBuilder
@@ -146,8 +146,10 @@ public class BaseEndToEndTest {
             swallowException(crankerRouter::stop);
         }
         boolean isRust = scaffolding.RustTestHelper.isRustMode();
-        if(isRust){
-            try { Thread.sleep(300); } catch (Exception ignored) {}
+        if (isRust) {
+            try {
+                Thread.sleep(300);
+            } catch (Exception ignored) {}
         }
     }
 
